# recipe

./: .env  .gitignore  PLAN.md  README.md  TODOS.md  cypress.config.ts  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: cypress.yml  main.yml  rust.yml
client/: .env.development  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
client/cypress/e2e/: Login.cy.ts
client/src/: App.svelte
client/src/lib/common/dto/: Comment.dto.ts  (+3 more)
client/src/lib/components/: AuthGuard.svelte  CommentPreview.svelte  Loading.svelte  NewComment.svelte  NewRecipe.svelte  RecipeComments.svelte  RecipeDetails.svelte  RecipePreview.svelte  UserForm.svelte
client/src/lib/routes/: Browse.svelte  Home.svelte  Index.svelte  Login.svelte  Profile.svelte  Recipe.svelte  Register.svelte
client/src/lib/schemas/: user.schema.ts
client/src/routes/: +layout.svelte  +page.svelte
client/test/: basic.test.ts
cypress/: tsconfig.json
cypress/e2e/: Browse.cy.ts  Login.cy.ts  Recipe.cy.ts  Register.cy.ts
cypress/support/: commands.ts  constants.ts  fake.ts
server/: .env.ci  .gitignore  Cargo.toml  bacon.toml  e2e.sh
server/migrations/: 20230602014815_initial_migration.sql  20230611123401_fake_data.sql
server/migrations/test/: 20230602014815_initial_migration.sql  20230611123401_fake_data.sql
server/src/: auth.rs  comment.rs  id_guard.rs  lib.rs  main.rs  recipe.rs  schema.rs  tests.rs  user.rs
server/src/comment/: routes.rs  tests.rs
server/src/recipe/: routes.rs  tests.rs
server/src/user/: routes.rs  tests.rs
(+14 files in other folders)
