[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "=0.5.0-rc.3"
rocket_db_pools = { version = "=0.1.0-rc.3", features = ["sqlx_mysql"] }
sqlx = { version = "0.6", features = [ "macros" ], default-features = false }
dotenvy = "0.15"
