[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
rocket_db_pools = { version = "=0.1.0-rc.3", features = ["sqlx_mysql"] }
sqlx = { version = "0.6", features = [ "macros", "migrate" ], default-features = false }
dotenvy = "0.15"
bcrypt = "0.14"
anyhow = "1.0"
uuid = { version = "1.3.3", features = ["v4", "fast-rng"] }
